--- a/samples/pvmex/Makefile.in
+++ b/samples/pvmex/Makefile.in
@@ -102,4 +102,5 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+pvmex_n.o: pvmex_n.cc
 simples.o: simples.cc
