--- a/samples/token/Makefile.in
+++ b/samples/token/Makefile.in
@@ -108,5 +108,7 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+tknmods_n.o: tknmods_n.cc
+tknring_n.o: tknring_n.cc
 token.o: token.cc \
   token.h
