--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -75,11 +75,12 @@ cmdenv.o: cmdenv.cc \
   ../../include/util.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
-  ../../include/coutvect.h \
   ../../include/ccoroutine.h \
+  ../../include/coutvect.h \
   ../../include/carray.h \
   ../../include/cenvir.h \
   ../envir/envdefs.h \
+  ../../include/envirext.h \
   ../../include/cpar.h \
   ../../include/cqueue.h \
   ../../include/cgate.h
