--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -12,6 +12,7 @@ OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 OMNETPP_VERSION=@OMNETPP_VERSION@
 
 CFLAGS=@CFLAGS@
+AKAROA_CFLAGS=@AKAROA_CFLAGS@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -24,7 +25,7 @@ HAVE_DLOPEN=@HAVE_DLOPEN@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -DBUILDING_ENVIR -DHAVE_DLOPEN=$(HAVE_DLOPEN)
+COPTS=$(CFLAGS) $(AKAROA_CFLAGS) -I$(OMNETPP_INCL_DIR) -DBUILDING_ENVIR -DHAVE_DLOPEN=$(HAVE_DLOPEN)
 
 OBJS=args.o cenvir.o cinifile.o main.o omnetapp.o slaveapp.o seeds.o \
      patmatch.o platdep.o speedmtr.o filemgrs.o akoutvectormgr.o
