--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -96,12 +96,14 @@ akoutvectormgr.o: akoutvectormgr.cc \
   ../../include/cmodule.h \
   ../../include/cstat.h \
   ../../include/macros.h \
+  akoutvectormgr.h \
   ../../include/defs.h \
   ../../include/cpar.h \
   ../../include/cobject.h \
   ../../include/util.h \
   ../../include/carray.h \
   ../../include/chead.h \
+  ../../include/cexception.h \
   args.h \
   envdefs.h \
   ../../include/envirext.h \
@@ -111,7 +113,8 @@ akoutvectormgr.o: akoutvectormgr.cc \
   ../../include/coutvect.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
-  ../../include/ctypes.h
+  ../../include/ctypes.h \
+  filemgrs.h
 args.o: args.cc \
   args.h \
   envdefs.h \
@@ -134,6 +137,7 @@ cenvir.o: cenvir.cc \
   ../../include/util.h \
   ../../include/carray.h \
   ../../include/chead.h \
+  ../../include/cexception.h \
   ../../include/envirext.h \
   ../../include/ccoroutine.h \
   ../../include/cqueue.h \
@@ -167,6 +171,7 @@ filemgrs.o: filemgrs.cc \
   envdefs.h \
   ../../include/carray.h \
   ../../include/chead.h \
+  ../../include/cexception.h \
   args.h \
   ../../include/envirext.h \
   ../../include/errmsg.h \
@@ -203,6 +208,7 @@ omnetapp.o: omnetapp.cc \
   ../../include/carray.h \
   ../../include/chead.h \
   ../../include/cenvir.h \
+  ../../include/cexception.h \
   ../../include/envirext.h \
   ../../include/cobject.h \
   ../../include/util.h \
@@ -219,6 +225,7 @@ patmatch.o: patmatch.cc \
 platdep.o: platdep.cc \
   ../../include/defs.h \
   ../../include/util.h \
+  ../../include/cexception.h \
   ../../include/cenvir.h \
   ../../include/cpar.h \
   ../../include/cobject.h
@@ -227,6 +234,7 @@ seeds.o: seeds.cc \
   ../../include/carray.h \
   ../../include/chead.h \
   ../../include/cenvir.h \
+  ../../include/cexception.h \
   args.h \
   envdefs.h \
   ../../include/envirext.h \
@@ -246,6 +254,7 @@ slaveapp.o: slaveapp.cc \
   ../../include/carray.h \
   ../../include/chead.h \
   ../../include/cenvir.h \
+  ../../include/cexception.h \
   args.h \
   ../../include/envirext.h \
   ../../include/cobject.h \
