--- a/samples/fddi/omnetpp.ini
+++ b/samples/fddi/omnetpp.ini
@@ -11,11 +11,9 @@ total-stack-kb = 4000
 
 [Cmdenv]
 runs-to-execute = 3
-module-messages = no
-verbose-simulation = no
-;module-messages = yes
-;verbose-simulation = yes
-display-update = 1 ms
+express-mode = yes
+status-frequency = 50000
+performance-display = no
 
 [Slaves]
 ;write-slavelog = no
