--- a/samples/fifo1/omnetpp.ini
+++ b/samples/fifo1/omnetpp.ini
@@ -1,15 +1,15 @@
 [General]
 network = fifonet1
 random-seed = 1
-sim-time-limit = 10h
+sim-time-limit = 10s
 cpu-time-limit= 180s
 ini-warnings = no
 
 [Cmdenv]
 runs-to-execute = 1,2
+express-mode = no
 module-messages = yes
-verbose-simulation = yes
-display-update = 100ms
+event-banners = yes
 
 [Tkenv]
 default-run=1
