--- a/samples/fifo2/omnetpp.ini
+++ b/samples/fifo2/omnetpp.ini
@@ -7,9 +7,9 @@ ini-warnings = no
 
 [Cmdenv]
 runs-to-execute = 1,2
+express-mode = no
 module-messages = yes
-verbose-simulation = yes
-display-update = 100ms
+event-banners = yes
 
 [Tkenv]
 default-run=1
