--- a/samples/hcube/omnetpp.ini
+++ b/samples/hcube/omnetpp.ini
@@ -11,9 +11,13 @@ cpu-time-limit = 180s
 total-stack-kb = 2048 ;2MBytes -- may need to be increased
 
 [Cmdenv]
+express-mode = yes
+# for non-express mode:
 module-messages = yes
-verbose-simulation = yes
-display-update = 100ms
+event-banners = yes
+# for express mode:
+status-frequency = 50000
+performance-display = no
 
 [Tkenv]
 default-run=1
