--- a/samples/hist/omnetpp.ini
+++ b/samples/hist/omnetpp.ini
@@ -7,9 +7,9 @@ output-vector-file = hist.vec
 
 [Cmdenv]
 runs-to-execute = 1,2,3
+express-mode = no
 module-messages = yes
-verbose-simulation = no
-display-update = 1000
+event-banners = no
 
 [Tkenv]
 default-run=1
