--- a/samples/nim/omnetpp.ini
+++ b/samples/nim/omnetpp.ini
@@ -3,8 +3,9 @@ ini-warnings = no
 network = nim
 
 [Cmdenv]
+express-mode = no
 module-messages = yes
-verbose-simulation = no
+event-banners = yes
 
 [Tkenv]
 default-run=1
