--- a/samples/pvmex/omnetpp.ini
+++ b/samples/pvmex/omnetpp.ini
@@ -5,8 +5,9 @@ netif-check-freq = 1
 ini-warnings = false
 
 [Cmdenv]
+express-mode = no
 module-messages = yes
-verbose-simulation = yes
+event-banners = yes
 
 [Slaves]
 write-slavelog = yes
