--- a/samples/token/omnetpp.ini
+++ b/samples/token/omnetpp.ini
@@ -6,14 +6,18 @@ snapshot-file = token.sna
 log-parchanges = no
 random-seed = 1
 total-stack-kb=4096 ;4 Mbyte -- increase if necessary
-sim-time-limit = 60s
-;cpu-time-limit= 180s
+sim-time-limit = 180s
+; cpu-time-limit= 60s
 
 [Cmdenv]
 runs-to-execute = 1,2,3
+express-mode = yes
+# for non-express mode:
 module-messages = yes
-verbose-simulation = no
-display-update = 100ms
+event-banners = yes
+# for express mode:
+status-frequency = 50000
+performance-display = no
 
 [Tkenv]
 default-run=1
