--- a/samples/dyna2/omnetpp.ini
+++ b/samples/dyna2/omnetpp.ini
@@ -11,9 +11,13 @@ cpu-time-limit= 600s
 total-stack-kb = 2048 ; 2MByte, increase if necessary
 
 [Cmdenv]
+express-mode = yes
+# for non-express mode:
 module-messages = yes
-verbose-simulation = yes
-display-update = 0.5s
+event-banners = yes
+# for express mode:
+status-frequency = 50000
+performance-display = no
 
 [Tkenv]
 default-run=1
