new Cmdenv options

--- a/tutorial/queues/omnetpp.ini
+++ b/tutorial/queues/omnetpp.ini
@@ -10,9 +10,13 @@ output-scalar-file = fifo.sca
 
 [Cmdenv]
 runs-to-execute = 1
-module-messages = no
-verbose-simulation = no
-display-update = 1h
+express-mode = yes
+# for non-express mode:
+module-messages = yes
+event-banners = yes
+# for express mode:
+status-frequency = 50000
+performance-display = no
 
 [Tkenv]
 # Change the 1 to 2 for the ring demo
