*** empty log message ***

--- a/samples/fifo1/omnetpp.ini
+++ b/samples/fifo1/omnetpp.ini
@@ -7,7 +7,7 @@ ini-warnings = no
 
 [Cmdenv]
 runs-to-execute = 1,2
-express-mode = no
+#express-mode = yes
 module-messages = yes
 event-banners = yes
 
