--- a/samples/hist/omnetpp.ini
+++ b/samples/hist/omnetpp.ini
@@ -7,7 +7,7 @@ output-vector-file = hist.vec
 
 [Cmdenv]
 runs-to-execute = 1,2,3
-express-mode = no
+#express-mode = yes
 module-messages = yes
 event-banners = no
 
